<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <LinearLayout
        android:id="@+id/kla_buttonlist"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/usebutton"
            android:onClick="doSomething"
            android:text="@string/kla_use" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/showbutton"
            android:onClick="doSomething"
            android:text="@string/kla_details" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/createbutton"
            android:onClick="doSomething"
            android:text="@string/kla_create" />

    </LinearLayout>

    <ListView
        android:id="@+id/key_list"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_alignParentTop="true"
        android:choiceMode="singleChoice"
        android:listSelector="@android:color/darker_gray"
        android:layout_above="@id/kla_buttonlist" />

</RelativeLayout>

